[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Marco Lamina <marco@arcane.engineer>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^8.0.2"
sphinx-material = "^0.0.36"
myst-parser = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
